Fixed issue with achievement due to using createdAt for search